art-cluster/pipelines/config/argocd/project/art-pipelines-ui/05-service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: art-pipelines-ui
  namespace: art-pipelines-ui
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: art-pipelines-ui-proxy-tls
spec:
  selector:
    app: art-pipelines-ui
  ports:
    - name: https
      port: 443
      targetPort: https
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: art-pipelines-ui
  namespace: art-pipelines-ui
spec:
  to:
    kind: Service
    name: art-pipelines-ui
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
