art-cluster/pipelines/config/argocd/project/art-pipelines-ui/06-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: art-pipelines-ui
  namespace: art-pipelines-ui
spec:
  podSelector:
    matchLabels:
      app: art-pipelines-ui
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
      ports:
        - protocol: TCP
          port: 8443
